--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.example.recipesapp.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
@@ -21,7 +21,11 @@
         android:id="@+id/profileFragment"
         android:name="com.example.recipesapp.ui.profile.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_newRecipeFragment"
+            app:destination="@id/newRecipeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/recipeDetailFragment"
         android:name="com.example.recipesapp.ui.recipe.RecipeDetailFragment"
@@ -31,11 +35,16 @@
         android:id="@+id/recipesFragment"
         android:name="com.example.recipesapp.ui.recipe.RecipesFragment"
         android:label="fragment_recipes"
-        tools:layout="@layout/fragment_recipes" >
+        tools:layout="@layout/fragment_recipes">
         <action
             android:id="@+id/action_recipesFragment_to_recipeDetailFragment"
             app:destination="@id/recipeDetailFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/newRecipeFragment"
+        android:name="com.example.recipesapp.ui.profile.NewRecipeFragment"
+        android:label="fragment_new_recipes"
+        tools:layout="@layout/fragment_new_recipe" />
     <activity
         android:id="@+id/splashActivity"
         android:name="com.example.recipesapp.activities.SplashActivity"
