--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.RecipesApp" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.RecipesApp" parent="Theme.Material3.DayNight.NoActionBar">
     </style>
 </resources>
